# ForgeAI

./: .env  .gitignore  .gitlab-ci.yml  README.md  SKILLS.md  audit.md  backends.md  deepagents.md  hello.mist.txt  hello.txt  implementation_plan.md  implementation_plan_deepplan.md  long_memory.md  middleware.md  models.md  official_skills_docs.md  package.json  plan.md  pyproject.toml  subagents.md  t.py
.agent_audit/: audit.jsonl  observability.jsonl
.github/workflows/: ci.yml  publish.yml
.helius/: settings.yaml
agent-skills/: README.md
fastaz/: app.py  train.py
helius-cli/: .gitignore  audit.md  package-lock.json  package.json  plan.md  readme.md  tsconfig.json
helius-cli/.helius/: settings.yaml
helius-cli/source/: agent.ts  cli.tsx  main.ts  tui.tsx
helius-cli/test/: security.test.ts
helius-cli/test-repro/: README.md  package.json
scripts/: manual_npm_bg_test.py  test_file_creation.py
skills/: example.md  react_patterns.md  sql_expert.md
source/: agent.ts  cli.tsx  main.ts  tui.tsx  types.d.ts
source/agents/: builder.ts  checkpointer.ts  hitl.ts  llm.ts  runner.ts  sessions.ts
source/tools/: delegation.ts  fs.ts  git.ts  intelligence.ts  search.ts  shell.ts  verification.ts
source/utils/: audit.ts  config.ts  discovery.ts  logger.ts  logging_setup.ts  security.ts
src/: main.py
src/helius_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: _test.py  manual_npm_bg_test.py  test_deepplan.py  test_file_tools.py  test_notes_middleware.py  test_notes_tool.py  test_shell_background.py  test_skills_tool.py
(+32 files in other folders)
